# NANDReader_FTDI

./: Geometry.md  NandTool.sln  README.md
NandTool/: FtdiDiag.cpp  FtdiDiag.hpp  FtdiNand.cpp  FtdiNand.hpp  Makefile  NandChip.cpp  NandChip.hpp  NandCmds.h  NandData.cpp  NandData.hpp  NandDataLP.cpp  NandDataLP.hpp  NandDataSP.cpp  NandDataSP.hpp  NandGeometry.cpp  NandGeometry.hpp  NandGeometryByID.cpp  NandGeometryFromUser.cpp  NandGeometryFromUser.hpp  NandID.cpp  NandID.hpp  NandOnfi.cpp  NandOnfi.hpp  NandTool.cpp  NandTool.vcxproj  NandTool.vcxproj.filters  ReadMe.txt  onfi.h  stdafx.cpp  stdafx.h  targetver.h
NandTool/Debug/: CL.read.1.tlog  CL.write.1.tlog  NandTool.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
NandTool/ftdi/: ftd2xx.h
NandTool/libftdi1-1.0/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LibFTDI1Config.cmake.in  README  README.build  README.mingw  Toolchain-Crossbuild32.cmake  Toolchain-mingw32.cmake  libftdi-1.0.kdev4  libftdi.lnt  libftdi1-config.in  libftdi1.pc.in  libftdi1.spec.in  libftdipp1.pc.in
NandTool/libftdi1-1.0/bindings/: CMakeLists.txt  doxy2swig.py  ftdi1.i
NandTool/libftdi1-1.0/build-win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  libftdi1.sln
NandTool/libftdi1-1.0/build-win32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
NandTool/libftdi1-1.0/build-win32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
NandTool/libftdi1-1.0/build-win32/bindings/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
NandTool/libftdi1-1.0/build-win32/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  baud_test.vcxproj  baud_test.vcxproj.filters  bitbang.vcxproj  bitbang.vcxproj.filters  bitbang2.vcxproj  bitbang2.vcxproj.filters  bitbang_cbus.vcxproj  bitbang_cbus.vcxproj.filters  bitbang_ft2232.vcxproj  bitbang_ft2232.vcxproj.filters  eeprom.vcxproj  eeprom.vcxproj.filters  find_all.vcxproj  find_all.vcxproj.filters  serial_test.vcxproj  serial_test.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  stream_test.vcxproj  stream_test.vcxproj.filters
NandTool/libftdi1-1.0/build-win32/ftdi_eeprom/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
NandTool/libftdi1-1.0/build-win32/ftdipp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
NandTool/libftdi1-1.0/build-win32/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ftdi1-static.vcxproj  ftdi1-static.vcxproj.filters  ftdi1.vcxproj  ftdi_version_i.h
NandTool/libftdi1-1.0/build-win32/src/ftdi1-static.dir/StaticRelease/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  ftdi1-static.lastbuildstate  lib.command.1.tlog
NandTool/libftdi1-1.0/build-win32/src/ftdi1.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NandTool/libftdi1-1.0/build-win32/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
NandTool/libftdi1-1.0/doc/: Doxyfile.in  Doxyfile.xml.in  EEPROM-structure  release-checklist.txt
NandTool/libftdi1-1.0/examples/: CMakeLists.txt  serial_test.c  stream_test.c
NandTool/libftdi1-1.0/examples/python/: complete.py  simple.py
NandTool/libftdi1-1.0/ftdi_eeprom/: CMakeLists.txt  example.conf  ftdi_eeprom_version.h.in  main.c
NandTool/libftdi1-1.0/ftdipp/: CMakeLists.txt  ftdi.cpp  ftdi.hpp
NandTool/libftdi1-1.0/src/: CMakeLists.txt  ftdi.c  ftdi.h  ftdi_i.h  ftdi_stream.c  ftdi_version_i.h.in
NandTool/libftdi1-1.0/test/: CMakeLists.txt  basic.cpp  baudrate.cpp
Observed/: Observed.md
